--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -4,6 +4,11 @@
     textarea, input {
         outline: none;
     }
+    button {
+        background: transparent;
+        outline: none;
+        border: none;
+    }
 }
 
 $black: #000;
@@ -56,7 +61,6 @@ body {
         font-family: 'Supreme', sans-serif;
 
         .__user {
-            text-align: right;
             width: fit-content;
             height: fit-content;
             margin-right: .2em;
@@ -107,7 +111,7 @@ body {
             font-size: medium;
         }
 
-        > img {
+        img {
             height: 20px;
             padding: 10px;
         }
