--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -42,7 +42,7 @@ body {
         height: 75vh;
         border: 1px solid $white;
         border-radius: 10px;
-        overflow-y: auto;
+        overflow-y: hidden;
         background: rgba(0, 0, 0, 0.5);
 
         img {
@@ -97,11 +97,14 @@ body {
     .type-bar {
         position: absolute;
         display: flex;
+        z-index: 1;
         left: 0;
         right: 0;
         bottom: 0;
+        margin-top: 2em;
         padding: 5px;
         border-top: 1px solid $white;
+        background: $black;
 
         > input {
             resize: none;
@@ -118,6 +121,12 @@ body {
         img {
             height: 20px;
             padding: 10px;
+            cursor: pointer;
+
+            &#btn-clean {
+                height: 25px;
+                width: 25px;
+            }
         }
     }
 }
